# warsaw-pool-ranking

./: .dockerignore  .env.example  .gitignore  2025-11-21-hey-youre-in-an-empty-directory-now.txt  CHANGELOG.md  CRITICAL_IMPLEMENTATION_NOTES.md  DATABASE_SETUP.md  DESIGN.md  DOCKER_SETUP.md  Makefile  PYTHON_IMPLEMENTATION_GUIDE.md  README.md  RUST_IMPLEMENTATION_PLAN.md  docker-compose.yml  start.sh
backend/: .env.example  Cargo.toml  Dockerfile  README.md  build.rs  entrypoint.sh  pytest.ini  requirements.txt  venues.json.example
backend-rust-ai/: .env.example  .gitignore  Cargo.toml  PYTHON_VS_RUST.md  README.md
backend-rust-ai/src/: api.rs  cache.rs  db.rs  main.rs  models.rs  rating.rs  scraper.rs
backend/app/: __init__.py  config.py  database.py  main.py  models.py  schemas.py
backend/app/api/: players.py
backend/app/data/: __init__.py  cuescore_api.py  parser.py  venue_scraper.py
backend/app/rating/: __init__.py  calculator.py  confidence.py  simulator.py  time_decay.py
backend/cache/raw/: 10017067.json  10048936.json  10125064.json  10136122.json  10193734.json  10207687.json  10217209.json  10261285.json  10278241.json  10289692.json  10301770.json  10321003.json  10406488.json  10442356.json  10457737.json  10480318.json  10541206.json  10569628.json  10569634.json  10582381.json  10601206.json  10633531.json  10646443.json  10659265.json  10737184.json  10749346.json  10778686.json  10906555.json  10928863.json  10941298.json  10965063.json  11005732.json  11058670.json  11075329.json  11079337.json  11110759.json  11131561.json  11181469.json  11191234.json  11224282.json  (+2322 more)
backend/config/: venues.py
backend/scripts/: __init__.py  docker-init.sh  init_database.py  run_weekly_update.py  weekly_update.py
backend/src/: lib.rs  main.rs  temp_scraper_test.rs
backend/src/api/: cuescore_client.rs  handlers.rs  mod.rs  models.rs  routes.rs
backend/src/config/: mod.rs  settings.rs  venues.rs
backend/src/database/: games.rs  (+5 more)
backend/tests/: README.md  test_calculator.py  test_confidence.py  test_parser.py  test_time_decay.py
(+114 files in other folders)
