[package]
name = "warsaw_pool_ranking"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# HTTP client for API calls and web scraping
reqwest = { version = "0.11", features = ["json"] }

# HTML parsing for web scraping
scraper = "0.17"
regex = "1.10"
urlencoding = "2.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "chrono"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Numerical computing for Bradley-Terry
nalgebra = "0.32"
ndarray = "0.15"
