[package]
name = "warsaw_pool_ranking"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "temp_scraper_test"
path = "src/temp_scraper_test.rs"

[dependencies]
# CLI arguments parsing
clap = { version = "4.5.53", features = ["derive", "string"] }
clap_complete = "4.5.61"

# Async runtime
tokio = { version = "1.48.0", features = ["full"] }

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

# HTTP client for API calls and web scraping
reqwest = { version = "0.12.24", features = ["json"] }

# HTML parsing for web scraping
scraper = "0.24.0"
regex = "1.12.2"
urlencoding = "2.1.3"

# Database - using rusqlite (pure Rust, no system dependencies)
rusqlite = { version = "0.32.1", features = ["bundled", "chrono"] }
r2d2 = "0.8"
r2d2_sqlite = "0.25"

# Date/time
chrono = { version = "0.4.42", features = ["serde"] }

# Error handling
anyhow = "1.0.100"

# Logging
log = "0.4.28"
sensible-env-logger = "0.3.2"
colored = "3.0.0"

# Numerical computing for Bradley-Terry
nalgebra = "0.34.1"
ndarray = "0.17.1"

# Web Server
axum = "0.7.5"
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["cors", "trace"] }

